realme error check

--- a/limbo/affiliate/templates/mobile/realme/realme 5pro/realme 5pro.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 5pro/realme 5pro.html
@@ -22,12 +22,16 @@
           <p class="content">The main rear camera has a 48-megapixel Sony IMX586 sensor, which was only found in much more expensive phones till very recently. It also has an f/1.79 aperture and supports PDAF. Next, there's an 8-megapixel wide-angle camera with an f/2.25 aperture, a 2-megapixel macro camera, and a 2-megapixel depth sensor. The front camera has a 16-megapixel sensor and f/2 aperture</p>
           <p class="content"><span>Realme 5 pro</span> powered by a Qualcomm SDM712 Snapdragon 712 (10 nm).  It has two Kryo 360 Gold cores running at 2.3GHz and six more Kryo 360 Silver cores running at 1.7GHz for power efficiency, as well as integrated Adreno 616 graphics.</p>
           <p class="content">You can buy the <span>Realme 5 Pro</span> with 4GB of RAM and 64GB of storage for Rs. 13,999; 6GB of RAM with the same 64GB of storage for Rs. 14,999; or 8GB of RAM and 128GB of storage for Rs. 16,999 which is a big jump. The 6.3-inch screen has a full-HD+ resolution of 1080x2340. There's a <span>4035mAH battery</span>, and Realme uses Oppo's proprietary VOOC quick charging technology. You get a large 20W charger in the box with this phone. There's also Wi-Fi 802.11ac, Bluetooth 5, and GPS, but no FM radio. All the usual sensors, including a gyroscope, are included.</p>
-      <div class="aff-link">
-        <a href="https://www.amazon.in/realme-Sparkling-Blue-128GB-Storage/dp/B07XHM7LHM/ref=mp_s_a_1_2?dchild=1&keywords=realme+5+pro&qid=1594896923&sr=8-2" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-        <a href="https://www.amazon.in/realme-Sparkling-Blue-128GB-Storage/dp/B07XHM7LHM/ref=mp_s_a_1_2?dchild=1&keywords=realme+5+pro&qid=1594896923&sr=8-2" class="affilated-link_amazon" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-        <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/realme-Sparkling-Blue-128GB-Storage/dp/B07XHM7LHM/ref=mp_s_a_1_2?dchild=1&keywords=realme+5+pro&qid=1594896923&sr=8-2">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/realme-Sparkling-Blue-128GB-Storage/dp/B07XHM7LHM/ref=mp_s_a_1_2?dchild=1&keywords=realme+5+pro&qid=1594896923&sr=8-2">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
+          </div>
+          <p></p>
       </div>
-    </div>
     {% endblock content%}
     {% block specs%}
     <!-- specification -->
