--- a/limbo/affiliate/templates/mobile/realme/realme 5s/realme 5s.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 5s/realme 5s.html
@@ -22,11 +22,15 @@
           <p class="content">The 6.5-inch display has a screen protector pre-applied. The notch isn't very prominent and the bezels on the sides are relatively slim but this phone has a noticeable chin. Sadly, the resolution is still HD+ (1600x720), which is fine for everyday viewing but not as sharp as a full-HD+ display, which we're seeing increasingly at this price. There is Corning <span>Gorilla Glass 3+</span> scratch protection for the screen, which is good.</p>
           <p class="content">The <span>Realme 5</span> was the first phone in India with four cameras priced under Rs. 10,000, and for the <span>Realme 5s</span>, the company has swapped out the 12-megapixel main sensor for a 48-megapixel one.  This camera supports PDAF, has an f/1.7 aperture, and can do 10x digital zoom. The other three rear cameras are the same as on the Realme 5. There's an 8-megapixel wide-angle camera; a 2-megapixel depth sensor; and a 2-megapixel macro camera. For selfies, we also have the same 13-megapixel front camera with an f/2.0 aperture.</p>
           <p class="content">Internally, the Realme 5s has the same guts as the Realme 5. You get a <span>Qualcomm Snapdragon 665 SoC</span>, and two variants — one with 4GB of RAM and 64GB of storage and the other with 4GB of RAM and 128GB of storage. We had the latter variant for review. You also get dual-4G VoLTE support, dual-band Wi-Fi 802.11ac, Bluetooth 5, and the same suite of sensors as the older model. It comes with a 5,000mAh battery but just like last time, there's no fast charging.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Realme-4Gb-64Gb-Crystal-Blue/dp/B0822P8TWK" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.amazon.in/Realme-4Gb-64Gb-Crystal-Blue/dp/B0822P8TWK" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Realme-4Gb-64Gb-Crystal-Blue/dp/B0822P8TWK">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Realme-4Gb-64Gb-Crystal-Blue/dp/B0822P8TWK">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
 
     {% endblock content%}
