--- a/limbo/affiliate/templates/mobile/realme/realme 6pro/realme 6pro.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 6pro/realme 6pro.html
@@ -21,11 +21,15 @@
           <p class="content">With every new model, <span>Realme</span> changes the design of the back, and for the 6 Pro, we now have a lightning-inspired design in either blue or orange. It looks quite funky and isn't too flashy, which we like. The glossy finish of the back makes this phone very slippery but thankfully it's <span>Gorilla Glass 5</span>, so scuff marks weren't really an issue. The Realme 6 Pro is quite chunky at 8.9mm and a bit heavy at 202g.The Realme 6 Pro features a 6.6-inch LCD display with a dual hole-punch cutout, which gives this phone a modern appearance.</p>
           <p class="content">The <span>Realme 6 Pro</span> has a similar rear camera setup to the Realme 6, but with the depth camera swapped for a telephoto camera. There's a 64-megapixel primary sensor, an 8-megapixel ultra-wide camera, a 12-megapixel telephoto camera with 2X optical zoom, and a 2-megapixel macro camera. In the front, we have a 16-megapixel primary camera and a second 8-megapixel wide-angle camera.</p>
           <p class="content">The <span>Snapdragon 720G</span> is a powerful chip, so as expected, general usage and multitasking was handled superbly. The 90Hz refresh rate makes usage feel smooth, and the good thing is that there's an Auto option, which means it automatically scales down to 60Hz to conserve power if an app can't benefit from a higher refresh rate. it has support for  30W fast charger managed to charge the battery from zero to about 90 percent in an hour, which again, is very quick.</p>
-          <div class="aff-link">
-            <a href="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
-            <a href="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+            </form>
+            <form action="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
 
     {% endblock content%}
