--- a/limbo/affiliate/templates/mobile/realme/realme C3/realme C3.html
+++ b/limbo/affiliate/templates/mobile/realme/realme C3/realme C3.html
@@ -21,11 +21,15 @@
           <p><span>Realme C3</span> is a budget smartphone from <span>Realme</span> and it sports a sunrise design. The company offers the phone in two colours Frozen Blue and Blazing Red. It has a big display that measures 6.5-inches and has a 20:9 aspect ratio. The <span>Realme C3</span> sports a 5,000mAh battery which is a highlight for this smartphone. This is also the reason why it is a tad heavy at 195g.</p>
           <p>The <span>Realme C3</span> is powered by a <span>Mediatek Helio G70 SoC</span> and comes in two variants. The base variant has 3GB RAM and 32GB of storage while the other variant has 4GB RAM and 64GB of storage. It is a dual SIM device with support for 4G as well as VoLTE on both SIM slots. It runs Realme UI 1.0 on top of Android 10.</p>
           <p>It sports a dual-camera setup at the back with a 12-megapixel primary camera and a 2-megapixel depth sensor. It clicks decent photos but low-light could do with some improvements.</p>
-          <div class="aff-link">
-            <a href="https://www.flipkart.com/realme-c3-frozen-blue-32-gb/p/itm58bf81a807d66?pid=MOBFZHC5HAGKGBBW&lid=LSTMOBFZHC5HAGKGBBWJH2HLH&marketplace=FLIPKART&pageUID=1594897288022" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
-            <a href="https://www.flipkart.com/realme-c3-frozen-blue-32-gb/p/itm58bf81a807d66?pid=MOBFZHC5HAGKGBBW&lid=LSTMOBFZHC5HAGKGBBWJH2HLH&marketplace=FLIPKART&pageUID=1594897288022" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.flipkart.com/realme-c3-frozen-blue-32-gb/p/itm58bf81a807d66?pid=MOBFZHC5HAGKGBBW&lid=LSTMOBFZHC5HAGKGBBWJH2HLH&marketplace=FLIPKART&pageUID=1594897288022">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+            </form>
+            <form action="https://www.flipkart.com/realme-c3-frozen-blue-32-gb/p/itm58bf81a807d66?pid=MOBFZHC5HAGKGBBW&lid=LSTMOBFZHC5HAGKGBBWJH2HLH&marketplace=FLIPKART&pageUID=1594897288022">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
