--- a/limbo/affiliate/templates/mobile/realme/realme X2 pro/realme X2pro.html
+++ b/limbo/affiliate/templates/mobile/realme/realme X2 pro/realme X2pro.html
@@ -29,11 +29,15 @@
           <p><span>Realme</span> has finally moved beyond the polycarbonate bodies we've seen so far on its phones, for an aluminium body with <span>Gorilla Glass 5</span> on the front and back. This makes the X2 Pro feel very good to hold. This phone has a 6.5-inch full-HD+ <span>AMOLED panel</span> with a claimed 500nits of sustained brightness and 1000nits of peak brightness. The display is sharp, viewing angles are good, and colours have good saturation. What's special though, is that this display can run at 90Hz instead of the usual 60Hz. </p>
           <p>The <span>Realme X2 Pro</span> uses the same 64-megapixel f/1.8 primary camera as the Realme XT, but with different companion sensors. The 2-megapixel macro camera has been ditched for a more useful 13-megapixel telephoto camera. This is capable of 2X optical zoom, 5X hybrid zoom, and a total of 20X digital zoom. There's also an 8-megapixel wide-angle camera with an f/2.2 aperture and a 115-degree field of view, and finally a 2-megapixel depth sensor.</p>
           <p><span>Realme X2 pro</span> powered by a <span>Qualcomm SM8150 Snapdragon 855+ (7 nm)</span> The Realme X2 Pro is available in two variants in India; one with 8GB of RAM and 128GB of storage  priced at Rs. 29,999, and the second with 12GB of RAM and 256GB of storage priced at Rs. 33,999. There's also support for Dolby Atmos, which works when playing audio through the speakers as well as wired or wireless headphones. it's have 4000mAh battery and support for Fast charging 50W, 100% in 35 min.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Realme-Pro-Neptune-Blue-RAM/dp/B087TGZSJY/ref=mp_s_a_1_5?dchild=1&keywords=realme+x2+pro&qid=1594896429&sprefix=realme+x&sr=8-5" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.flipkart.com/realme-x2-pro-neptune-blue-64-gb/p/itma3203d88190a3?pid=MOBFM2WZG3BJWSBT&lid=LSTMOBFM2WZG3BJWSBTDJHSXS&marketplace=FLIPKART&pageUID=1594896526045" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Realme-Pro-Neptune-Blue-RAM/dp/B087TGZSJY/ref=mp_s_a_1_5?dchild=1&keywords=realme+x2+pro&qid=1594896429&sprefix=realme+x&sr=8-5">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Realme-Pro-Neptune-Blue-RAM/dp/B087TGZSJY/ref=mp_s_a_1_5?dchild=1&keywords=realme+x2+pro&qid=1594896429&sprefix=realme+x&sr=8-5">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
