--- a/limbo/affiliate/templates/mobile/realme/realme 6/realme 6.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 6/realme 6.html
@@ -22,11 +22,15 @@
           <p class="content">The <span>Realme 6</span> packs in a quad-camera setup at the back consisting of a 64-megapixel primary camera, an 8-megapixel wide-angle camera with a 119-degree field of view, a 2-megapixel monochrome camera, and a 2-megapixel macro camera. At the front, it has a 16-megapixel selfie shooter.</p>
           <p class="content">Powering the Realme 6 is the <span>MediaTek Helio G90T</span>, a powerful SoC which we have used on the Xiaomi Redmi Note 8 Pro (Review). This processor has two Cortex-A76 cores clocked at 2.05GHz and six cores clocked at 2.0GHz.In terms of connectivity, this phone offers Bluetooth 5, dual-band Wi-Fi ac, and three navigation systems. It is a dual-SIM device with support for 4G as well as VoLTE.</p>
           <p class="content">Battery life on the Realme 6 is quite good. It managed to go on for 19 hours, 26 minutes in our HD video loop test. With our usage, the Realme 6 managed to go on for over a day and a half before needing to be plugged in. A 30W fast charger is bundled in the box. Using this, the phone got to 65 percent in 30 minutes and took a little over an hour to charge completely.</p>
-          <div class="aff-link">
-            <a href="https://www.flipkart.com/realme-6-comet-blue-64-gb/p/itma64226eb3e2d2?pid=MOBFTAZ5CXWPRYKW&lid=LSTMOBFTAZ5CXWPRYKWM7V5HX&marketplace=FLIPKART&pageUID=1594897095040" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
-            <a href="https://www.flipkart.com/realme-6-comet-blue-64-gb/p/itma64226eb3e2d2?pid=MOBFTAZ5CXWPRYKW&lid=LSTMOBFTAZ5CXWPRYKWM7V5HX&marketplace=FLIPKART&pageUID=1594897095040" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.flipkart.com/realme-6-comet-blue-64-gb/p/itma64226eb3e2d2?pid=MOBFTAZ5CXWPRYKW&lid=LSTMOBFTAZ5CXWPRYKWM7V5HX&marketplace=FLIPKART&pageUID=1594897095040">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+            </form>
+            <form action="https://www.flipkart.com/realme-6-comet-blue-64-gb/p/itma64226eb3e2d2?pid=MOBFTAZ5CXWPRYKW&lid=LSTMOBFTAZ5CXWPRYKWM7V5HX&marketplace=FLIPKART&pageUID=1594897095040">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
       </div>
     {% endblock content%}
     {% block specs%}
