--- a/limbo/affiliate/templates/mobile/realme/realme X2/realme X2.html
+++ b/limbo/affiliate/templates/mobile/realme/realme X2/realme X2.html
@@ -2,9 +2,7 @@
 {% block desc%}<meta name="description" content="Realme smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="realme x2,  realme x2 price, realme x2 price in india, realme x2 review, realme x2 specification"> {% endblock key%}
     {% load static %}
-    {% block title%}Realme X2 Full specification: hipein.com{% endblock title%}
-    {% block actmob%} class="active"{% endblock actmob%}
-    {% block content%}
+    {% block style%}
     <style>
       .info{
         padding-top: 10px;
@@ -13,6 +11,10 @@
         color:red;
       }
     </style>
+    {% endblock style %}
+    {% block title%}Realme X2 Full specification: hipein.com{% endblock title%}
+    {% block actmob%} class="active"{% endblock actmob%}
+    {% block content%}
     <!-- review and spec -->
     <div class="wrapper">
       <div class="main">
@@ -30,11 +32,15 @@
           <p class="content">In terms of <span>cameras</span>, the only thing that's new here compared to the <span>Realme XT</span> is the front camera. The XT uses a 32-megapixel front-facing camera, which has an f/2.0 aperture. For normal selfies, the camera shoots images at the native resolution, but in Portrait mode, the images are pixel-binned down to 8-megapixels.</p>
           <p class="content"> the <span>Realme X2</span> powerd by a <span> Qualcomm Snapdragon 730G SoC</span>. Charging speed was also impressive. We were able to charge the <span>Realme X2</span> from zero all the way to about 60 percent in half an hour, and up to 95 percent in an hour. This is thanks to the VOOC Flash Charge 4.0 feature and bundled 30W charger.
           </p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Realme-Pearl-Blue-128-RAM/dp/B07PVTYL7M/ref=mp_s_a_1_1?dchild=1&keywords=realme+x2&qid=1594896977&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.flipkart.com/realme-x2-pearl-green-64-gb/p/itm75023903eb431?pid=MOBFMXTSHFVBU7UD&lid=LSTMOBFMXTSHFVBU7UDCPO4AN&marketplace=FLIPKART&pageUID=1594896573448" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Realme-Pearl-Blue-128-RAM/dp/B07PVTYL7M/ref=mp_s_a_1_1?dchild=1&keywords=realme+x2&qid=1594896977&sr=8-1">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Realme-Pearl-Blue-128-RAM/dp/B07PVTYL7M/ref=mp_s_a_1_1?dchild=1&keywords=realme+x2&qid=1594896977&sr=8-1">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
