--- a/limbo/affiliate/templates/mobile/realme/realme X50 pro/realme X50 pro.html
+++ b/limbo/affiliate/templates/mobile/realme/realme X50 pro/realme X50 pro.html
@@ -2,17 +2,20 @@
 {% block desc%}<meta name="description" content="Realme smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="realme x50 pro,  realme x50 pro price, realme x50 pro price in india, realme x50 pro review, realme x50 pro specification"> {% endblock key%}
   {% load static %}
+  {% block style%}
+  <style>
+    .info{
+      padding-top: 10px;
+    }
+    .info span{
+      color:red;
+    }
+  </style>
+  {% endblock style %}
     {% block title%}Realme X50 Full specification: hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
-    <style>
-      .info{
-        padding-top: 10px;
-      }
-      .info span{
-        color:red;
-      }
-    </style>
+
     <!-- review and spec -->
     <div class="wrapper">
       <div class="main">
@@ -30,11 +33,15 @@
           <p>The <span>Realme X50 Pro</span> has four rear cameras, as is the norm these days. First up is a 64-megapixel primary camera based on the <span>Samsung GW1 sensor</span>, with an f/1.8 aperture. There's also an 8-megapixel f/2.3 wide-angle camera which is now fairly common even on low-end phones, but in this case doubles as the macro camera. The biggest surprise here is the 12-megapixel telephoto camera which gives you 2X optical zoom but has an f/2.5 aperture. Finally, there's a 2-megapixel monochrome depth camera. On the front of the phone we have a 32-megapixel primary camera and an 8-megapixel wide-angle one.</p>
           <p>We obviously had high expectations thanks to the <span>Snapdragon 865 processor</span>, which sets a new standard for performance.</p>
           <p><span>Realme</span> has managed to deliver impressive battery life as well. 4200mAh might not seem like a lot these days but the <span>Realme X50 Pro</span> manages to make that last for well over a full day. We didn't have to charge our unit till midway through the second morning after using it throughout the day. Our HD video loop test ran for 19 hours, 4 minutes.</p>
-          <div class="aff-link">
-            <a href="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
-            <a href="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+            </form>
+            <form action="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
@@ -316,6 +323,6 @@
         </div>
       </div>
     </div>
-    </div>
+  </div>
     <!-- 13 -->
     {% endblock specs%}
