realme error check

--- a/limbo/affiliate/templates/mobile/samsung/note 10plus/note 10plus.html
+++ b/limbo/affiliate/templates/mobile/samsung/note 10plus/note 10plus.html
@@ -20,11 +20,15 @@
         <div class="info">
           <p class="content">Samsung Galaxy Note 10+ smartphone was launched on 2019, August 07. Samsung Galaxy Note 10+ is powered by a Octa-core (2x2.73 GHz Mongoose M4 & 2x2.4 GHz Cortex-A75 & 4x1.9 GHz Cortex-A55) - EMEA/LATAM Samsung Exynos 9825 (7 nm) - EMEA/LATAM processor . It comes with 12GB of RAM.The Samsung Galaxy Note 10+ on the rear packs a 12-megapixel primary camera, 12-megapixel (telephoto) and 16-megapixel ultrawide-angle-camera and 0.3-megapixel (depth sensor). The rear camera setup has autofocus. It sports a 10-megapixel camera on the front for selfies, with an f/2.2 aperture . The front camera also features autofocus.There's a 4300mAh battery, with support for fast charging.</p>
           <p class="content">The Note 10+ runs on OneUI 2.0, which is based on Android 10.The Samsung Galaxy Note 10+ measures 162.3 x 77.2 x 7.9 mm (6.39 x 3.04 x 0.31 in) (height x width x thickness) and weighs 196 g (6.91 oz). It was launched in Aura Glow, Aura White, Aura Black, Aura Blue. Connectivity options on the Samsung Galaxy Note 10+ include Wi-Fi 802.11 a/b/g/n/ac/6, dual-band, Wi-Fi Direct, hotspot, GPS, Bluetooth v5.00, NFC, USB Type-C, 3G, and 4G.</p>
-          <div class="aff-link">
-            <a href="https://www.flipkart.com/samsung-galaxy-note-10-plus-aura-glow-256-gb/p/itm89ffb43fc7a18?pid=MOBFJFWVVMDNSFCF&lid=LSTMOBFJFWVVMDNSFCFUCSPAP&marketplace=FLIPKART&srno=s_1_6&otracker=search&otracker1=search&fm=SEARCH&iid=e0d98720-87ea-4cc7-ae22-8c8b5c86a209.MOBFJFWVVMDNSFCF.SEARCH&ppt=sp&ppn=sp&ssid=cz22kwb6io0000001594893508335&qH=8613800fc2180c80" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
-            <a href="https://www.flipkart.com/samsung-galaxy-note-10-plus-aura-glow-256-gb/p/itm89ffb43fc7a18?pid=MOBFJFWVVMDNSFCF&lid=LSTMOBFJFWVVMDNSFCFUCSPAP&marketplace=FLIPKART&srno=s_1_6&otracker=search&otracker1=search&fm=SEARCH&iid=e0d98720-87ea-4cc7-ae22-8c8b5c86a209.MOBFJFWVVMDNSFCF.SEARCH&ppt=sp&ppn=sp&ssid=cz22kwb6io0000001594893508335&qH=8613800fc2180c80" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.flipkart.com/samsung-galaxy-note-10-plus-aura-glow-256-gb/p/itm89ffb43fc7a18?pid=MOBFJFWVVMDNSFCF&lid=LSTMOBFJFWVVMDNSFCFUCSPAP&marketplace=FLIPKART&srno=s_1_6&otracker=search&otracker1=search&fm=SEARCH&iid=e0d98720-87ea-4cc7-ae22-8c8b5c86a209.MOBFJFWVVMDNSFCF.SEARCH&ppt=sp&ppn=sp&ssid=cz22kwb6io0000001594893508335&qH=8613800fc2180c80">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+            </form>
+            <form action="https://www.flipkart.com/samsung-galaxy-note-10-plus-aura-glow-256-gb/p/itm89ffb43fc7a18?pid=MOBFJFWVVMDNSFCF&lid=LSTMOBFJFWVVMDNSFCFUCSPAP&marketplace=FLIPKART&srno=s_1_6&otracker=search&otracker1=search&fm=SEARCH&iid=e0d98720-87ea-4cc7-ae22-8c8b5c86a209.MOBFJFWVVMDNSFCF.SEARCH&ppt=sp&ppn=sp&ssid=cz22kwb6io0000001594893508335&qH=8613800fc2180c80">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
