--- a/limbo/affiliate/templates/mobile/samsung/s10/s10.html
+++ b/limbo/affiliate/templates/mobile/samsung/s10/s10.html
@@ -20,11 +20,15 @@
         <div class="info">
           <p class="content">Samsung Galaxy S10 smartphone was launched on 2019, February 20. Samsung Galaxy S10 is powered by a Octa-core (2x2.73 GHz Mongoose M4 & 2x2.31 GHz Cortex-A75 & 4x1.95 GHz Cortex-A55) - EMEA/LATAM Samsung Exynos 9820 (8 nm) - EMEA/LATAM processor . It comes with 8GB of RAM.The Samsung Galaxy S10 on the rear packs a 12-megapixel primary camera, 12-megapixel (telephoto) and 16-megapixel ultrawide-angle-camera. The rear camera setup has autofocus. It sports a 10-megapixel camera on the front for selfies, with an f/1.9 aperture and 8-megapixel depth sensor. The front camera also features autofocus.There's a 3400mAh battery, with support for fast charging.</p>
           <p class="content">The S10 runs on OneUI 2.1, which is based on Android 10.The Samsung Galaxy S10 measures 149.9 x 70.4 x 7.8 mm (5.90 x 2.77 x 0.31 in) (height x width x thickness) and weighs 157 g (5.54 oz). It was launched in Prism White, Prism Black, Prism Green, Prism Blue, Canary Yellow, Flamingo Pink, Cardinal Red, Smoke Blue. Connectivity options on the Samsung Galaxy S10 include Wi-Fi 802.11 a/b/g/n/ac/6, dual-band, Wi-Fi Direct, hotspot, GPS, Bluetooth v5.00, NFC, USB Type-C, 3G, and 4G.</p>
-          <div class="aff-link">
-            <a href="https://www.flipkart.com/samsung-galaxy-s10-prism-white-512-gb/p/itmfdyp6ydvhczvg?pid=MOBFDNHARGTYX5YG&lid=LSTMOBFDNHARGTYX5YGZPHCFJ&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=9c21e053-5db0-4f1f-b274-a7b8000ee755.MOBFDNHARGTYX5YG.SEARCH&ppt=sp&ppn=sp&ssid=xfonfayoq80000001594893783850&qH=10e055ecdaa45c3c" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
-            <a href="https://www.flipkart.com/samsung-galaxy-s10-prism-white-512-gb/p/itmfdyp6ydvhczvg?pid=MOBFDNHARGTYX5YG&lid=LSTMOBFDNHARGTYX5YGZPHCFJ&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=9c21e053-5db0-4f1f-b274-a7b8000ee755.MOBFDNHARGTYX5YG.SEARCH&ppt=sp&ppn=sp&ssid=xfonfayoq80000001594893783850&qH=10e055ecdaa45c3c" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.flipkart.com/samsung-galaxy-s10-prism-white-512-gb/p/itmfdyp6ydvhczvg?pid=MOBFDNHARGTYX5YG&lid=LSTMOBFDNHARGTYX5YGZPHCFJ&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=9c21e053-5db0-4f1f-b274-a7b8000ee755.MOBFDNHARGTYX5YG.SEARCH&ppt=sp&ppn=sp&ssid=xfonfayoq80000001594893783850&qH=10e055ecdaa45c3c">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+            </form>
+            <form action="https://www.flipkart.com/samsung-galaxy-s10-prism-white-512-gb/p/itmfdyp6ydvhczvg?pid=MOBFDNHARGTYX5YG&lid=LSTMOBFDNHARGTYX5YGZPHCFJ&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=9c21e053-5db0-4f1f-b274-a7b8000ee755.MOBFDNHARGTYX5YG.SEARCH&ppt=sp&ppn=sp&ssid=xfonfayoq80000001594893783850&qH=10e055ecdaa45c3c">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
