--- a/limbo/affiliate/templates/mobile/samsung/s10plus/s10plus.html
+++ b/limbo/affiliate/templates/mobile/samsung/s10plus/s10plus.html
@@ -20,11 +20,15 @@
         <div class="info">
           <p class="content">Samsung Galaxy S10+ smartphone was launched on 2019, February 20. Samsung Galaxy S10+ is powered by a Octa-core (2x2.73 GHz Mongoose M4 & 2x2.31 GHz Cortex-A75 & 4x1.95 GHz Cortex-A55) - EMEA/LATAM Samsung Exynos 9820 (8 nm) - EMEA/LATAM processor . It comes with 12GB and 8GB of RAM.The Samsung Galaxy S10+ on the rear packs a 12-megapixel primary camera, 12-megapixel (telephoto) and 16-megapixel ultrawide-angle-camera. The rear camera setup has autofocus. It sports a 10-megapixel camera on the front for selfies, with an f/1.9 aperture and 8-megapixel depth senson. The front camera also features autofocus.There's a 4100mAh battery, with support for fast charging.</p>
           <p class="content">The S10+ runs on OneUI 2, which is based on Android 10.The Samsung Galaxy S10+ measures 157.6 x 74.1 x 7.8 mm (6.20 x 2.92 x 0.31 in) (height x width x thickness) and weighs 175 g / 198 g (ceramic) (6.17 oz). It was launched in Prism White, Prism Black, Prism Green, Prism Blue, Canary Yellow, Flamingo Pink, Ceramic Black, Ceramic White, Cardinal Red, Smoke Blue .Connectivity options on the Samsung Galaxy S10+ include Wi-Fi 802.11 a/b/g/n/ac/6, dual-band, Wi-Fi Direct, hotspot, GPS, Bluetooth v5.00, NFC, USB Type-C, 3G, and 4G.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B07KXC5Q61/ref=sr_1_1?dchild=1&keywords=Samsung%2BGalaxy%2BS10%2B&qid=1594893151&sr=8-1&th=1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B07KXC5Q61/ref=sr_1_1?dchild=1&keywords=Samsung%2BGalaxy%2BS10%2B&qid=1594893151&sr=8-1&th=1" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B07KXC5Q61/ref=sr_1_1?dchild=1&keywords=Samsung%2BGalaxy%2BS10%2B&qid=1594893151&sr=8-1&th=1">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B07KXC5Q61/ref=sr_1_1?dchild=1&keywords=Samsung%2BGalaxy%2BS10%2B&qid=1594893151&sr=8-1&th=1">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
