--- a/limbo/affiliate/templates/mobile/samsung/s20/s20.html
+++ b/limbo/affiliate/templates/mobile/samsung/s20/s20.html
@@ -20,11 +20,15 @@
         <div class="info">
           <p class="content">Samsung Galaxy S20 smartphone was launched on 11th February 2020. Samsung Galaxy S20 is powered by a 2GHz octa-core Samsung Exynos 990 processor that features 2 cores clocked at 2.73GHz, 2 cores clocked at 2.5GHz and 4 cores clocked at 2GHz. It comes with 8GB of RAM.The Samsung Galaxy S20 on the rear packs a 12-megapixel primary camera with an f/1.8 aperture; a second 64-megapixel camera with an f/2.0 aperture and a third 12-megapixel camera with an f/2.2 aperture. The rear camera setup has autofocus. It sports a 10-megapixel camera on the front for selfies, with an f/2.2 aperture. The front camera also features autofocus.There's a 4,000mAh battery, with support for fast charging.</p>
           <p class="content">The S20 runs on OneUI 2, which is based on Android 10.The Samsung Galaxy S20 measures 151.70 x 69.10 x 7.90mm (height x width x thickness) and weighs 163.00 grams. It was launched in Cloud Blue, Cloud Pink, Cosmic Grey, and colours.Connectivity options on the Samsung Galaxy S20 include Wi-Fi 802.11 a/b/g/n/ac/Yes, GPS, Bluetooth v5.00, NFC, USB Type-C, 3G, and 4G with active 4G.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B08445DF23/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20&qid=1594893074&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEySzlHWTFNUUhOTjY0JmVuY3J5cHRlZElkPUEwNTM1OTgzMktWSlozODhaSDg1NCZlbmNyeXB0ZWRBZElkPUEwMDc4NDI4NlFRQktJQ0FJVjk2JndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B08445DF23/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20&qid=1594893074&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEySzlHWTFNUUhOTjY0JmVuY3J5cHRlZElkPUEwNTM1OTgzMktWSlozODhaSDg1NCZlbmNyeXB0ZWRBZElkPUEwMDc4NDI4NlFRQktJQ0FJVjk2JndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B08445DF23/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20&qid=1594893074&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEySzlHWTFNUUhOTjY0JmVuY3J5cHRlZElkPUEwNTM1OTgzMktWSlozODhaSDg1NCZlbmNyeXB0ZWRBZElkPUEwMDc4NDI4NlFRQktJQ0FJVjk2JndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B08445DF23/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20&qid=1594893074&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEySzlHWTFNUUhOTjY0JmVuY3J5cHRlZElkPUEwNTM1OTgzMktWSlozODhaSDg1NCZlbmNyeXB0ZWRBZElkPUEwMDc4NDI4NlFRQktJQ0FJVjk2JndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
