--- a/limbo/affiliate/templates/mobile/samsung/z flip/z flip.html
+++ b/limbo/affiliate/templates/mobile/samsung/z flip/z flip.html
@@ -20,11 +20,15 @@
         <div class="info">
           <p class="content">Samsung Galaxy Note 10 smartphone was launched on 2020, February 11. Samsung Galaxy Z Flip is powered by a Octa-core (1x2.95 GHz Kryo 485 & 3x2.41 GHz Kryo 485 & 4x1.78 GHz Kryo 485), Qualcomm SM8150 Snapdragon 855+ (7 nm) processor . It comes with 8GB of RAM.The Samsung Galaxy Z Flip on the rear packs a 12-megapixel primary camera and 12-megapixel ultrawide-angle-camera . The rear camera setup has autofocus. It sports a 10-megapixel camera on the front for selfies, with an f/2.4 aperture . The front camera also features autofocus.There's a 3300mAh battery, with support for fast charging.</p>
           <p class="content">The Z Flip runs on One UI 2.0, which is based on Android 10.The Samsung Galaxy Z Flip measures Unfolded: 167.3 x 73.6 x 7.2 mm(height x width x thickness), Folded: 87.4 x 73.6 x 17.3 mm (height x width x thickness) and weighs 183 g (6.46 oz). It was launched in Mirror Black, Mirror Purple, Mirror Gold, Thom Browne Edition. Connectivity options on the Samsung Galaxy Z Flip include Wi-Fi 802.11 a/b/g/n/ac, dual-band, Wi-Fi Direct, hotspot, GPS, Bluetooth v5.00, NFC, USB Type-C, 3G, and 4G.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B08444S68F/ref=sr_1_1?dchild=1&keywords=Samsung+Galaxy+z+flip&qid=1594893751&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B08444S68F/ref=sr_1_1?dchild=1&keywords=Samsung+Galaxy+z+flip&qid=1594893751&sr=8-1" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B08444S68F/ref=sr_1_1?dchild=1&keywords=Samsung+Galaxy+z+flip&qid=1594893751&sr=8-1" class="affilated-link_amazon">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B08444S68F/ref=sr_1_1?dchild=1&keywords=Samsung+Galaxy+z+flip&qid=1594893751&sr=8-1" class="affilated-link_amazon">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
