--- a/limbo/affiliate/templates/mobile/samsung/note 10/note 10.html
+++ b/limbo/affiliate/templates/mobile/samsung/note 10/note 10.html
@@ -22,11 +22,15 @@
         <div class="info">
           <p class="content">Samsung Galaxy Note 10 smartphone was launched on 2019, August 07. Samsung Galaxy Note 10 is powered by a Octa-core (2x2.73 GHz Mongoose M4 & 2x2.4 GHz Cortex-A75 & 4x1.9 GHz Cortex-A55) - EMEA/LATAM Samsung Exynos 9825 (7 nm) - EMEA/LATAM processor . It comes with 8GB of RAM.The Samsung Galaxy Note 10 on the rear packs a 12-megapixel primary camera, 12-megapixel (telephoto) and 16-megapixel ultrawide-angle-camera . The rear camera setup has autofocus. It sports a 10-megapixel camera on the front for selfies, with an f/2.2 aperture . The front camera also features autofocus.There's a 3500mAh battery, with support for fast charging.</p>
           <p class="content">The Note 10 runs on One UI 2.1, which is based on Android 10.The Samsung Galaxy Note 10 measures 151 x 71.8 x 7.9 mm (5.94 x 2.83 x 0.31 in) (height x width x thickness) and weighs 168 g (5.93 oz). It was launched in Aura Glow, Aura White, Aura Black, Aura Pink, Aura Red. Connectivity options on the Samsung Galaxy Note 10 include Wi-Fi 802.11 a/b/g/n/ac/6, dual-band, Wi-Fi Direct, hotspot, GPS, Bluetooth v5.00, NFC, USB Type-C, 3G, and 4G.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B07PQ7DK2N/ref=sr_1_3?dchild=1&keywords=Samsung+Galaxy+note+10&qid=1594893912&sr=8-3" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B07PQ7DK2N/ref=sr_1_3?dchild=1&keywords=Samsung+Galaxy+note+10&qid=1594893912&sr=8-3" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B07PQ7DK2N/ref=sr_1_3?dchild=1&keywords=Samsung+Galaxy+note+10&qid=1594893912&sr=8-3">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B07PQ7DK2N/ref=sr_1_3?dchild=1&keywords=Samsung+Galaxy+note+10&qid=1594893912&sr=8-3">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
