--- a/limbo/affiliate/templates/mobile/samsung/s10e/s10e.html
+++ b/limbo/affiliate/templates/mobile/samsung/s10e/s10e.html
@@ -20,11 +20,15 @@
         <div class="info">
           <p class="content">Samsung Galaxy S10e smartphone was launched on 2019, February 20. Samsung Galaxy S10e is powered by a 	Octa-core (2x2.73 GHz Mongoose M4 & 2x2.31 GHz Cortex-A75 & 4x1.95 GHz Cortex-A55) - EMEA/LATAM Samsung Exynos 9820 (8 nm) - EMEA/LATAM processor . It comes with 6GB and 8GB of RAM.The Samsung Galaxy S10e on the rear packs a 12-megapixel primary camera and 16-megapixel ultrawide-angle-camera. The rear camera setup has autofocus. It sports a 10-megapixel camera on the front for selfies, with an f/1.9 aperture. The front camera also features autofocus.There's a 3100mAh battery, with support for fast charging.</p>
           <p class="content">The S10e runs on OneUI 2, which is based on Android 10.The Samsung Galaxy S10e measures 142.2 x 69.9 x 7.9 mm (5.60 x 2.75 x 0.31 in) (height x width x thickness) and weighs 150 g (5.29 oz). It was launched in Prism White, Prism Black, Prism Green, Prism Blue, Canary Yellow, Flamingo Pink.Connectivity options on the Samsung Galaxy S10e include Wi-Fi 802.11 a/b/g/n/ac/6, dual-band, Wi-Fi Direct, hotspot, GPS, Bluetooth v5.00, NFC, USB Type-C, 3G, and 4G.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Samsung-Galaxy-SM-G970-Canary-Yellow/dp/B07P57DS41/ref=sr_1_2?dchild=1&keywords=Samsung+Galaxy+s10e&qid=1594893625&sr=8-2" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.amazon.in/Samsung-Galaxy-SM-G970-Canary-Yellow/dp/B07P57DS41/ref=sr_1_2?dchild=1&keywords=Samsung+Galaxy+s10e&qid=1594893625&sr=8-2" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Samsung-Galaxy-SM-G970-Canary-Yellow/dp/B07P57DS41/ref=sr_1_2?dchild=1&keywords=Samsung+Galaxy+s10e&qid=1594893625&sr=8-2">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Samsung-Galaxy-SM-G970-Canary-Yellow/dp/B07P57DS41/ref=sr_1_2?dchild=1&keywords=Samsung+Galaxy+s10e&qid=1594893625&sr=8-2">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
