--- a/limbo/affiliate/templates/mobile/samsung/s20 ultra/s20 ultra.html
+++ b/limbo/affiliate/templates/mobile/samsung/s20 ultra/s20 ultra.html
@@ -20,11 +20,15 @@
         <div class="info">
           <p class="content">Samsung Galaxy S20 ultra smartphone was launched on 2020, February 11. Samsung Galaxy S20 Ultra is powered by a  Octa-core (2x2.73 GHz Mongoose M5 & 2x2.50 GHz Cortex-A76 & 4x2.0 GHz Cortex-A55) Samsung Exynos 990 (7 nm+) processor . It comes with 12GB of RAM.The Samsung Galaxy S20 Ultra on the rear packs a 108-megapixel primary camera, a 48-megapixel telephoto camera, 12-megapixel ultrawide-angle-camera and a depth vision camera. The rear camera setup has autofocus. It sports a 40-megapixel camera on the front for selfies, with an f/2.2 aperture. The front camera also features autofocus.There's a 5,000mAh battery, with support for fast charging.</p>
           <p class="content">The S20 runs on OneUI 2, which is based on Android 10.The Samsung Galaxy S20 Ultra measures 166.9 x 76 x 8.8 mm (6.57 x 2.99 x 0.35 in) (height x width x thickness) and weighs 220 g (7.76 oz). It was launched in Cosmic Grey, Cosmic Black, Cloud White.Connectivity options on the Samsung Galaxy S20 Ultra include Wi-Fi 802.11 a/b/g/n/ac/6, dual-band, Wi-Fi Direct, hotspot, GPS, Bluetooth v5.00, NFC, USB Type-C, 3G, and 4G.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B08444S68Q/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20+ultra&qid=1594892932&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExN0NEWDdYMk00MUxNJmVuY3J5cHRlZElkPUEwNzE3OTU4MTBUOThVSkpSNzRQSyZlbmNyeXB0ZWRBZElkPUEwMDc3OTA0M0Q1TFg3TFBLS09OViZ3aWRnZXROYW1lPXNwX2F0ZiZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU=" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B08444S68Q/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20+ultra&qid=1594892932&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExN0NEWDdYMk00MUxNJmVuY3J5cHRlZElkPUEwNzE3OTU4MTBUOThVSkpSNzRQSyZlbmNyeXB0ZWRBZElkPUEwMDc3OTA0M0Q1TFg3TFBLS09OViZ3aWRnZXROYW1lPXNwX2F0ZiZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU=" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B08444S68Q/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20+ultra&qid=1594892932&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExN0NEWDdYMk00MUxNJmVuY3J5cHRlZElkPUEwNzE3OTU4MTBUOThVSkpSNzRQSyZlbmNyeXB0ZWRBZElkPUEwMDc3OTA0M0Q1TFg3TFBLS09OViZ3aWRnZXROYW1lPXNwX2F0ZiZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU=">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B08444S68Q/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20+ultra&qid=1594892932&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExN0NEWDdYMk00MUxNJmVuY3J5cHRlZElkPUEwNzE3OTU4MTBUOThVSkpSNzRQSyZlbmNyeXB0ZWRBZElkPUEwMDc3OTA0M0Q1TFg3TFBLS09OViZ3aWRnZXROYW1lPXNwX2F0ZiZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU=">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
