--- a/limbo/affiliate/templates/mobile/samsung/s20plus/s20plus.html
+++ b/limbo/affiliate/templates/mobile/samsung/s20plus/s20plus.html
@@ -20,11 +20,15 @@
         <div class="info">
           <p class="content">The Galaxy S20+ is powered by the Exynos 990 chipset and comes with 8GB of RAM and 128GB of storage. There's no 5G support for the models sold in India. It also has a 12-megapixel primary camera, a 12-megapixel wide-angle camera, a 64-megapixel telephoto camera and a depth sensor. There's a 4,500mAh battery, with support for fast charging. </p>
           <p class="content">The display also has a 90Hz refresh rate, which makes scrolling through lists feel fluid. Audio quality is also very good from the stereo speakers in the phone. It's a little big to manage comfortably with one hand, but it does feel very premium. The S20+ runs on OneUI 2, which is based on Android 10.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B084451YSS/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20%2B&qid=1594892677&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExQ1VYREhZOUVYSkhNJmVuY3J5cHRlZElkPUEwODQ0ODg1SkVRTzBSSFhESEs4JmVuY3J5cHRlZEFkSWQ9QTAwNzgwMjgyMkRWNlQyVlE2SEtFJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B084451YSS/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20%2B&qid=1594892677&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExQ1VYREhZOUVYSkhNJmVuY3J5cHRlZElkPUEwODQ0ODg1SkVRTzBSSFhESEs4JmVuY3J5cHRlZEFkSWQ9QTAwNzgwMjgyMkRWNlQyVlE2SEtFJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B084451YSS/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20%2B&qid=1594892677&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExQ1VYREhZOUVYSkhNJmVuY3J5cHRlZElkPUEwODQ0ODg1SkVRTzBSSFhESEs4JmVuY3J5cHRlZEFkSWQ9QTAwNzgwMjgyMkRWNlQyVlE2SEtFJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B084451YSS/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20%2B&qid=1594892677&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExQ1VYREhZOUVYSkhNJmVuY3J5cHRlZElkPUEwODQ0ODg1SkVRTzBSSFhESEs4JmVuY3J5cHRlZEFkSWQ9QTAwNzgwMjgyMkRWNlQyVlE2SEtFJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
